--- a/index.html
+++ b/index.html
@@ -17,58 +17,104 @@
     
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
+            background-color: #f5f5f5;
         }
 
-        #container {
+        h1 {
+            font-size: 24px;
+            color: #333;
+            margin-top: 20px;
+            font-weight: bold;
+        }
+
+        /* 🔥 Estilo mejorado para la barra de filtros */
+        .filters {
             display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 10px 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 15px;
+        }
+
+        .filter-label {
+            background: #444;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        select {
+            padding: 6px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            background: white;
+        }
+
+        button {
+            padding: 8px 12px;
+            border: none;
+            border-radius: 5px;
+            background: #5a67d8;
+            color: white;
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        button:hover {
+            background: #434190;
+        }
+
+        /* 🔥 Contenedor principal del mapa */
+        #container {
+            position: relative;
             width: 90%;
             height: 600px;
-            position: relative;
         }
 
         #map {
-            flex: 3;
+            width: 100%;
             height: 100%;
-            border: 2px solid #ddd;
             border-radius: 10px;
+            border: 2px solid #ddd;
         }
 
-        /* 🔥 Ajustes en la leyenda */
+        /* 🔥 Estilo de la leyenda */
         #legend {
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 280px;
+            width: 250px;
             background: white;
             padding: 10px;
             border-radius: 8px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             font-size: 14px;
             overflow-y: auto;
             max-height: 500px;
-            z-index: 1000;
         }
 
         .legend-item {
             display: flex;
             align-items: center;
             margin-bottom: 5px;
-            white-space: nowrap;
         }
 
         .legend-icon {
             font-size: 14px;
             margin-right: 8px;
-        }
-
-        /* 🔥 Negritas en las iniciales */
-        .legend-item b {
-            font-weight: bold;
         }
     </style>
 </head>
@@ -76,12 +122,12 @@
     <h1>Mapa de Centros de Atención</h1>
 
     <div class="filters">
-        <label for="filtroEstado">Filtrar por Estado:</label>
+        <span class="filter-label">Filtrar por Estado:</span>
         <select id="filtroEstado">
             <option value="Todos">Todos</option>
         </select>
 
-        <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
+        <span class="filter-label">Filtrar por Tipo de Unidad:</span>
         <select id="filtroTipo">
             <option value="Todos">Todos</option>
         </select>
@@ -93,27 +139,25 @@
         <div id="map"></div>  
         <div id="legend">
             <h3>Leyenda</h3>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <b>CEB</b>: Centro de Empoderamiento y Bienestar</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <b>CEA</b>: Centro Externo de Atención</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <b>CEAV</b>: Comisión Ejecutiva de Atención a Víctimas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <b>CDM</b>: Centro para el Desarrollo de las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE</b>: Centro para el Desarrollo de las Mujeres Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ</b>: Comisión de Búsqueda de Personas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <b>CJM</b>: Centro de Justicia para las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> <b>CAVIZ</b>: Centro de Atención a la Violencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> <b>DIG</b>: Dirección de Igualdad de Género</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <b>ESTATAL</b>: Atención Estatal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <b>IMEF</b>: Instituto de las Mujeres en la Economía y Finanzas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT</b>: Instituto Municipal de la Mujer</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM</b>: Instituto de la Mujer Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI</b>: Módulo de Atención Integral</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <b>Municipal</b>: Atención Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <b>Punto Violeta</b>: Espacios Seguros para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <b>Puerta Violeta</b>: Programa de Seguridad para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <b>ULA/EMERGENCIA</b>: Unidad de Atención de Emergencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <b>ULA/Itinerante</b>: Unidad Local de Atención Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <b>ULA/TEL</b>: Línea de Atención Telefónica</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> <b>ULA/FIJA</b>: Unidad Local de Atención Fija</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <b>CDM:</b> Centro para el Desarrollo de las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> <b>ULA/FIJA:</b> Unidad Local de Atención Fija</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <b>CJM:</b> Centro de Justicia para las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <b>CEB:</b> Centro de Empoderamiento y Bienestar</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <b>Municipal:</b> Atención Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <b>ULA/TEL:</b> Línea de Atención Telefónica</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <b>Punto Violeta:</b> Espacios Seguros para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT:</b> Instituto Municipal de la Mujer</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI:</b> Módulo de Atención Integral</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM:</b> Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ:</b> Comisión de Búsqueda de Personas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <b>CEA:</b> Centro Externo de Atención</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <b>ESTATAL:</b> Atención Estatal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</div>
         </div>
     </div>
 
