--- a/index.html
+++ b/index.html
@@ -17,67 +17,52 @@
     
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f5f5f5;
+            background-color: #f8f9fa;
         }
 
         h1 {
             font-size: 24px;
+            margin-bottom: 10px;
             color: #333;
-            margin-top: 20px;
-            font-weight: bold;
         }
 
-        /* 🔥 Estilo mejorado para la barra de filtros */
         .filters {
             display: flex;
+            gap: 10px;
             align-items: center;
-            gap: 15px;
-            padding: 10px 20px;
-            background: #4A90E2; /* Azul bonito */
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
+            background: #2F80ED;
+            padding: 10px;
+            border-radius: 8px;
+            color: white;
+            margin-bottom: 10px;
         }
 
-        .filter-label {
-            background: #2874A6; /* Azul más oscuro */
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 14px;
+        .filters label {
             font-weight: bold;
         }
 
-        select {
-            padding: 6px;
+        select, button {
+            padding: 8px;
             border-radius: 5px;
-            border: 1px solid #ccc;
+            border: none;
             font-size: 14px;
-            background: white;
         }
 
         button {
-            padding: 8px 12px;
-            border: none;
-            border-radius: 5px;
-            background: #5a67d8;
+            background-color: #1B4F72;
             color: white;
-            font-size: 14px;
-            font-weight: bold;
             cursor: pointer;
-            transition: background 0.3s;
         }
 
         button:hover {
-            background: #434190;
+            background-color: #154360;
         }
 
-        /* 🔥 Contenedor principal del mapa */
         #container {
             position: relative;
             width: 90%;
@@ -88,15 +73,14 @@
             width: 100%;
             height: 100%;
             border-radius: 10px;
-            border: 2px solid #ddd;
         }
 
-        /* 🔥 Estilo de la leyenda */
+        /* 🔥 Ajustes en la leyenda */
         #legend {
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 250px;
+            width: 280px;
             background: white;
             padding: 10px;
             border-radius: 8px;
@@ -104,12 +88,18 @@
             font-size: 14px;
             overflow-y: auto;
             max-height: 500px;
+            text-align: left;
         }
 
         .legend-item {
             display: flex;
             align-items: center;
             margin-bottom: 5px;
+            font-size: 13px;
+        }
+
+        .legend-item b {
+            font-size: 14px;
         }
 
         .legend-icon {
@@ -122,12 +112,12 @@
     <h1>Mapa de Centros de Atención</h1>
 
     <div class="filters">
-        <span class="filter-label">Filtrar por Estado:</span>
+        <label for="filtroEstado">Filtrar por Estado:</label>
         <select id="filtroEstado">
             <option value="Todos">Todos</option>
         </select>
 
-        <span class="filter-label">Filtrar por Tipo de Unidad:</span>
+        <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
         <select id="filtroTipo">
             <option value="Todos">Todos</option>
         </select>
@@ -153,6 +143,8 @@
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT:</b> Instituto Municipal de la Mujer</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI:</b> Módulo de Atención Integral</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM:</b> Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> <b>CAVIZ:</b> Centro de Atención a la Violencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> <b>DIG:</b> Dirección de Igualdad de Género</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ:</b> Comisión de Búsqueda de Personas</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <b>CEA:</b> Centro Externo de Atención</div>
@@ -164,3 +156,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
