--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #F5F5F5;
+            background-color: #F5F5F5; /* 🎨 Color más neutral y moderno */
         }
 
         h1 {
@@ -35,7 +35,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #A67C52;
+            background: #A67C52; /* 🎨 Color cálido */
             padding: 10px;
             border-radius: 8px;
             color: white;
@@ -75,10 +75,10 @@
             border-radius: 10px;
         }
 
-        /* Ajustes en la leyenda para que NO quede detrás del mapa */
+        /* 🔥 Subimos la leyenda más arriba */
         #legend {
             position: absolute;
-            bottom: 10px;
+            top: 60px; /* 📌 Subir más la leyenda */
             right: 10px;
             width: 280px;
             background: white;
@@ -89,7 +89,6 @@
             overflow-y: auto;
             max-height: 400px;
             text-align: left;
-            z-index: 1000; /* 🔥 Asegura que la leyenda siempre esté adelante */
         }
 
         .legend-item {
@@ -157,4 +156,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
