--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #F5F5F5; /* 🎨 Color más neutral y moderno */
+            background-color: #F5F5F5;
         }
 
         h1 {
@@ -35,7 +35,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #A67C52; /* 🎨 Color cálido */
+            background: #A67C52;
             padding: 10px;
             border-radius: 8px;
             color: white;
@@ -75,37 +75,39 @@
             border-radius: 10px;
         }
 
+        /* 🔥 Ajuste de la leyenda */
         #legend {
-    position: absolute;
-    top: 60px; /* 📌 Subimos más la leyenda */
-    right: 10px;
-    width: 280px;
-    background: white;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    font-size: 14px;
-    overflow-y: auto;
-    max-height: 400px;
-    text-align: left;
-    z-index: 1000; /* 🔥 Asegura que la leyenda esté siempre arriba */
-}
-
+            position: absolute;
+            top: 50px; /* 📌 Subida un poco más */
+            right: 10px;
+            width: 280px;
+            background: white;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+            font-size: 14px;
+            overflow-y: auto;
+            max-height: 400px;
+            text-align: left;
+            z-index: 1000; /* 🔥 Asegura que la leyenda esté siempre arriba */
+        }
 
         .legend-item {
             display: flex;
             align-items: center;
-            margin-bottom: 5px;
+            gap: 8px; /* 🛠 Espacio entre ícono y texto */
             font-size: 13px;
+            margin-bottom: 5px;
+        }
+
+        .legend-item i {
+            flex-shrink: 0;
+            font-size: 16px; /* 📌 Ajusta el tamaño del ícono */
         }
 
         .legend-item b {
-            font-size: 14px;
-        }
-
-        .legend-icon {
-            font-size: 14px;
-            margin-right: 8px;
+            min-width: 130px; /* 📌 Asegura alineación de las iniciales */
+            display: inline-block;
         }
     </style>
 </head>
@@ -144,18 +146,10 @@
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT:</b> Instituto Municipal de la Mujer</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI:</b> Módulo de Atención Integral</div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM:</b> Instituto de la Mujer Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> <b>CAVIZ:</b> Centro de Atención a la Violencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> <b>DIG:</b> Dirección de Igualdad de Género</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ:</b> Comisión de Búsqueda de Personas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <b>CEA:</b> Centro Externo de Atención</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <b>ESTATAL:</b> Atención Estatal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
 
